<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="android:wellness:Document:1:2">
    <string name="hello">Hello!</string>
    <string name="app_name">Wellness</string>
    <string name="startup_welcome">Welcome to Wellness! Please log in.</string>
    <string name="startup_new_acct">Create a new account</string>
    <string name="startup_existing_acct">Log in to an existing account</string>
    <string name="new_uname">Choose a username:</string>
    <string name="new_passwd">Choose a password:</string>
    <string name="new_done">Done</string>
    <string name="new_back">Back</string>
    <string name="existing_uname">Username:</string>
    <string name="existing_passwd">Password:</string>
    <string name="existing_login">Login</string>
    <string name="existing_back">Back</string>
    <string name="startup_gps_prompt">Do you want to use gps?</string>
    <string name="startup_gps_title">GPS Not Available</string>
    <string name="startup_internet_prompt">You must connect to the internet in order for this application to work.</string>
    <string name="startup_internet_title">Internet Not Available</string>
    <string name="main_withings">Connect to Withings</string>
    <string name="main_fitbit">Connect to FitBit</string>
    <string name="main_kCal">Log Calories</string>
    <string name="new_lname">Enter your lastname:</string>
    <string name="new_fname">Enter your firstname:</string>
    <string name="main_msgusr">Message Another User</string>
    <string name="main_msgall">Message All Users</string>
    <string name="info_withings">Enable Withings Account</string>
    <string name="info_fitbit">Enable Fitbit Account</string>
    <string name="info_withings_uname">Withings Username:</string>
    <string name="info_withings_pword">Withings Password:</string>
    <string name="info_fitbit_uname">Fitbit Username:</string>
    <string name="info_fitbit_pword">Fitbit Password</string>
    <string name="main_info">View or Change User Information</string>
    <string name="main_welcome">Welcome </string>
    <string name="main_logout">Logout</string>
    <string name="info_done">Done</string>
    <string name="msg_user_to">To:</string>
    <string name="msg_user_msg">Message:</string>
    <string name="msg_user_send">Send</string>
    <string name="msg_all_msg">Message:</string>
    <string name="msg_all_send">Send</string>
    <string name="main_msg_from">You have a message from </string>
    <string name="main_prompt_title">You\'ve got mail!</string>
    <string name="enable_gps_dialog">Please Enable Your GPS</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="not_support_gps">GPS provider not supported</string>
    <string name="not_support_network">Network provider not supported</string>
    <string name="local_service_label">Wellness Application</string>
    <string name="incoming_message_info_message_text">this is the text of a previous message.\nkthx. meet u for dinner. cul8r</string>
    <string name="incoming_message_view_message_text">This is the text of the posted notification.</string>
    <string name="imcoming_message_view_message2_text">Did you notice that the status bar icon disappeared?</string>
    <string name="imcoming_message_ticker_text">New text message: <xliff:g id="text">%0$s</xliff:g></string>
</resources>
